manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-${environment}
    nginx.ingress.kubernetes.io/app-root: /login
    # cert-manager.io/acme-challage-type: http01
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # Remove the following annotation:
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # Add this annotation instead:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "off"
spec:
  ingressClassName: nginx
  rules:
  - host: ${argocd_server_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - ${argocd_server_domain}
    secretName: ${argocd_server_tls}
