manifests/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ${loki_domain}
    http:
      paths:
      - path: /loki(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: loki
            port: 
              number: 3100
  tls:
  - hosts:
    - ${loki_domain}
    secretName: loki-tls
